--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                 }
 
                 // Send phone number to the server
-                fetch('http://127.0.0.1:5001/passwords', {
+                fetch('http://[::]:5001/', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
